--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "browser-sync": "^2.26.7",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
     "gulp": "^4.0.2",
-    "gulp-nodemon": "^2.4.2"
+    "gulp-nodemon": "^2.4.2",
+    "mv": "^2.1.1"
   }
 }
