--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "browser-sync": "^2.26.7",
+    "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "gulp": "^4.0.2",
